syntax = "proto3";

package pb;

import "user.proto";
import "account.proto";

option go_package = "github.com/fajaramaulana/simple_bank_project/pb";

message CreateUserRequest {
    string username = 1;
    string password = 2;
    string email = 3;
    string full_name = 4;
    string currency = 5;
}

message CreateUserRespose {
    User user = 1;
    Account account = 2;
}